[package]
name = "sign_in"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI",
    "Win32_UI_Input",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

# Win32
# Win32_System
