[package]
name = "sign_in"
version = "0.1.0"
edition = "2021"

[lib]
name = "sign_in_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "sign_in"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
# dll-syringe = "0.15.2"
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI",
    "Win32_UI_Input",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading"
] }
